Handle "smb:/" as well as "smb://" URLs, since both are valid (or at least possible.)

BUG: 103932

svn path=/branches/KDE/3.5/kdenetwork/krdc/; revision=563039